--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,16 +4,18 @@
     {% if form %}
     <div class="h-100 d-flex justify-content-center align-items-center">
         <div>
-            <form action="" method="post">
+            <form action="" method="post" style="text-align: center">
                 {{ form.hidden_tag() }}
                 <p>
-                    {{ form.api_key.label }}<br>
-                    {{ form.api_key(size=32) }}<br>
+                    {{ form.api_key.label() }}<br>
+                    {{ form.api_key(size=32, style="text-align: center") }}<br>
                     {% for error in form.api_key.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
-                <p>{{ form.submit() }}</p>
+                <p>
+                    {{ form.submit(class="btn btn-primary") }}
+                </p>
             </form>
         </div>
     </div>
