--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,19 +9,16 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-info" role="alert">{{ message }}</div>
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
-
-        <br><br>
+    <div class="container-fluid">
+        <nav class="navbar navbar-dark bg-dark rounded">
+            <a class="text-white" href="{{ url_for('index') }}">Home</a>
+        </nav>
+    </div>
+    <div class="container-fluid">
         {% if logo %}
+        <br><br>
         <a href="{{ url_for('index') }}">
-            <img style="margin-left: auto; margin-right: auto; display: block; width: 30%; height: 30%" src="{{ url_for('static', filename=logo) }}" />
+            <img style="margin-left: auto; margin-right: auto; display: block; width: 15%; height: 15%" src="{{ url_for('static', filename=logo) }}" />
         </a>
         {% endif %}
 
